Viewport class + node + tests

--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -435,4 +435,10 @@
   <data name="NonIntersectingElements" xml:space="preserve">
     <value>Elements are not intersecting</value>
   </data>
+  <data name="EmptyView" xml:space="preserve">
+    <value>Cannot place empty view on sheet.</value>
+  </data>
+  <data name="ViewAlreadyPlacedOnSheet" xml:space="preserve">
+    <value>Cannont place view on sheet as it is already on a sheet.</value>
+  </data>
 </root>
