--- a/src/Libraries/RevitNodesUI/Properties/Resources.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.resx
@@ -389,4 +389,7 @@
   <data name="PortDataViewToolTip" xml:space="preserve">
     <value>The View</value>
   </data>
+  <data name="AllWarningsOfTypeDescription" xml:space="preserve">
+    <value>Returns a list of all instances of the selected warning type.</value>
+  </data>
 </root>
