--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -447,6 +447,12 @@
   <data name="StartPointListHasNulls" xml:space="preserve">
     <value>Start point list contains null elements</value>
   </data>
+  <data name="NoChildElements" xml:space="preserve">
+    <value>Element has no child Elements</value>
+  </data>
+  <data name="NoParentElement" xml:space="preserve">
+    <value>Element has no parent component</value>
+  </data>
   <data name="NotHostElement" xml:space="preserve">
     <value>Element is not a Host Element</value>
   </data>
@@ -458,6 +464,12 @@
   </data>
   <data name="NonIntersectingElements" xml:space="preserve">
     <value>Elements are not intersecting</value>
+  </data>
+  <data name="ChildElementsNotSupported" xml:space="preserve">
+    <value>Getting child elements is not supported for this type of Element.</value>
+  </data>
+  <data name="NotBuiltInCategory" xml:space="preserve">
+    <value>Element not valid. Use an element from a BuiltInCategory.</value>
   </data>
   <data name="DocumentNotWorkshared" xml:space="preserve">
     <value>Current Document is not workshared</value>
