--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -441,4 +441,7 @@
   <data name="NoElementsToPurge" xml:space="preserve">
     <value>No Elements to purge in the current document.</value>
   </data>
+  <data name="WrongStorageType" xml:space="preserve">
+    <value>Input value for this parameter needs to be of type {0}.</value>
+  </data>
 </root>
